--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
   <title>Token Factory</title>
   <link href="./app.css" rel='stylesheet' type='text/css'>
   <script src="./app.js"></script>
+  <link rel="shortcut icon" href="images/icon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
